--- a/flux/base/db-helmrelease.yaml
+++ b/flux/base/db-helmrelease.yaml
@@ -2,8 +2,8 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: database
-  namespace: instavote
+  name: db
+  namespace: flux-system
 spec:
   chart:
     spec:
