--- a/flux/base/instavote-gitrepository.yaml
+++ b/flux/base/instavote-gitrepository.yaml
@@ -3,10 +3,10 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: GitRepository
 metadata:
   labels:
-    kustomize.toolkit.fluxcd.io/name: flux-system
-    kustomize.toolkit.fluxcd.io/namespace: flux-system
+    kustomize.toolkit.fluxcd.io/name: instavote-deploy
+    kustomize.toolkit.fluxcd.io/namespace: instavote
   name: instavote-deploy
-  namespace: flux-system
+  namespace: instavote
 spec:
   gitImplementation: go-git
   interval: 1h
