--- a/flux/base/instavote-provider.yaml
+++ b/flux/base/instavote-provider.yaml
@@ -3,7 +3,7 @@ apiVersion: notification.toolkit.fluxcd.io/v1beta1
 kind: Provider
 metadata:
   name: github-instavote
-  namespace: flux-system
+  namespace: instavote
 spec:
   address: https://github.com/dahston/instavote-deploy
   secretRef:
