--- a/flux/base/redis-kustomization.yaml
+++ b/flux/base/redis-kustomization.yaml
@@ -10,7 +10,7 @@ spec:
     name: redis
     namespace: instavote
   interval: 1h
-  path: ./kustomize/
+  path: ./kustomize/redis/staging
   prune: true
   sourceRef:
     kind: GitRepository
