--- a/flux/base/vote-staging-kustomziation.yaml
+++ b/flux/base/vote-staging-kustomziation.yaml
@@ -10,7 +10,7 @@ spec:
     name: vote
     namespace: instavote
   interval: 1h
-  path: ./kustomize
+  path: ./kustomize/vote/staging
   prune: true
   sourceRef:
     kind: GitRepository
